# cmake-rpath-experimental

./: CMakeLists.txt  README.md  library.c  main.c
.github/workflows/: rpath_test.yml
include/: library.h
